--- a/src/styles/Resume.css
+++ b/src/styles/Resume.css
@@ -23,7 +23,7 @@
 
 .resume-section-header{
     font-size: var(--font-resume-header);
-    margin-top: 20px;
+    margin-top: 5px;
 }
 
 .resume-section{
